--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,13 +5,15 @@
     <p>listening in: <%= @user.city.capitalize %>, <%= @user.country.capitalize %> </p>
     <p>listening as: <%= @user.lastfm_username %> </p>
 
+    <% if @user.id == session[:current_user] %>
     <p><%= link_to 'edit me!', edit_user_path(@user)  %></p>
-
     <p><%= button_to "delete me?", user_path(@user), method: :delete %></p>
+    <% end %>
+
     <p><%= link_to 'back to all', users_path %></p>
     <hr>
 
-    <h4><%= @user.username %>'s most played tracks for the last week:</h4>
+    <h4><%= @user.username %>'s most played tracks (overall):</h4>
     <ul>
       <% Lastfm.user_list(@user.lastfm_username).each do |track| %>
       <li><%= track[:title] %>, by <%= track[:artist] %></li>
