--- a/app/views/ratios/new.html.erb
+++ b/app/views/ratios/new.html.erb
@@ -1,4 +1,5 @@
-<h3> find where your friends are listening to the most: </h3>
+<h3> find where your friends are listening to the most! </h3>
+<h5> enter any valid last.fm username (not your homusik username), and the city to calculate their sync with (make sure to select the correct country for your city selection!): </h5>
 
 <% @ratio.errors.full_messages.each do |msg| %>
 <li> <%= msg %> </li>
@@ -10,12 +11,11 @@
 <%= f.label :lastfm_username %>
 <%= f.text_field :lastfm_username %>
 
-<%= f.label :country %>
-<%= f.select :country, Lastfm.countries %>
-
 <%= f.label :city %>
-<%= f.select :city, Lastfm.cities %>
+<%= f.collection_select :city, City.all, :name, :name %>
 
+<%= f.label :country %>
+<%= f.collection_select :country, Country.all, :name, :name %>
 
 <%= f.submit "calculate sync ratio"%>
 <% end %>
