--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,10 +14,10 @@
 <%= f.text_field :photo_url %>
 
 <%= f.label :city %>
-<%= f.text_field :city %>
+<%= f.collection_select :city, City.all, :name, :name %>
 
 <%= f.label :country %>
-<%= f.text_field :country %>
+<%= f.collection_select :country, Country.all, :name, :name %>
 
 <%= f.label :password %>
 <%= f.password_field :password %>
