--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to("Back to users", users_path) %>
+<p><a href= "https://secure.last.fm/join"> don't have a last.fm account? sign up here!</a></p>
+
+<p><%= link_to("Back to users", users_path) %></p>
